--- a/src/01-color-switcher.html
+++ b/src/01-color-switcher.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Color switcher</title>
+    <link rel="stylesheet" href="css/01-color-switcher.css" />
     <link rel="stylesheet" href="css/common.css" />
   </head>
   <body>
